refactoring and adding get route
